Actually do what previous commit said (forgot to save file) Change \bdv to \overline{\adv} to avoid notation clash with our notation for balls.

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -90,4 +90,4 @@
 \newcommand*{\ceiled}[1]{\ensuremath{\lceil#1\rceil}}
 \newcommand{\interval}[1]{[#1]}
 
-\newcommand*{\sisadv}{\bdv}
+\newcommand*{\sisadv}{\overline{\adv}}
